Added saving/loading/clearing... bounce lists via the console

--- a/Game/UI/MainWindow.xaml
+++ b/Game/UI/MainWindow.xaml
@@ -14,7 +14,7 @@
         </ControlTemplate>
 
         <ControlTemplate x:Key="MinTemplate" TargetType="{x:Type s:MinButton}">
-                <TextBlock Grid.Column="0" Text="-" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" FontWeight="Normal"/>
+            <TextBlock Grid.Column="0" Text="-" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" FontWeight="Normal"/>
         </ControlTemplate>
 
         <ControlTemplate x:Key="MaxTemplate" TargetType="{x:Type s:MaxButton}">
@@ -83,7 +83,7 @@
             <ContentControl.Resources>
                 <Sys:Boolean x:Key="Maxed">false</Sys:Boolean>
             </ContentControl.Resources>
-            
+
             <Border BorderBrush="Black" Padding="0,0,0,0" Margin="1,1,1,1" SnapsToDevicePixels="True" ClipToBounds="True" BorderThickness="1,1,1,1">
                 <Grid Loaded="Grid_Loaded">
                     <Grid.ColumnDefinitions>
@@ -101,13 +101,13 @@
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="1">
                             <!-- Detail controls here -->
-                            <Border Grid.Row="0">
+                            <Border Grid.Row="0" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
                                 <Grid DataContext="{Binding ElementName=MapControl}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Grid.Column="0" Text="WindowName" Panel.ZIndex="-1"/>
+                                    <TextBlock Grid.Column="0" Text="Bounce Map" Panel.ZIndex="-1"/>
                                     <s:MoveThumb Template="{StaticResource MoveThumbTemplate}" Cursor="SizeAll"/>
                                     <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,-2,0,0">
                                         <s:MinButton>
@@ -170,13 +170,14 @@
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="1">
                             <!-- Detail controls here -->
-                            <Border Grid.Row="0">
+                            <Border Grid.Row="0" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
                                 <Grid DataContext="{Binding ElementName=ConsoleControl}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Grid.Column="0" Text="WindowName" Panel.ZIndex="-1"/>
+                                    <Border />
+                                    <TextBlock Grid.Column="0" Text="Terminal" Panel.ZIndex="-1"/>
                                     <s:MoveThumb Template="{StaticResource MoveThumbTemplate}" Cursor="SizeAll"/>
                                     <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,-2,0,0">
                                         <s:MinButton>
