--- a/Game/UI/MainWindow.xaml
+++ b/Game/UI/MainWindow.xaml
@@ -252,8 +252,100 @@
                     </Grid>
                 </Border>
             </ContentControl>
-            
-            
+
+            <ContentControl
+            x:Name="DebugWindow"
+            Width="400"
+            MinWidth="0"
+            Height="200"
+            MinHeight="0"
+            Canvas.Top="150"
+            Canvas.Left="150"
+            Template="{StaticResource DesignerItemTemplate}"
+            ScrollViewer.VerticalScrollBarVisibility="Disabled"
+            Padding="0,0,0,0" UseLayoutRounding="True"
+            RenderTransformOrigin="0.5,0.5" Foreground="White" Background="Silver">
+                <!--<ContentControl.Triggers>
+                        <EventTrigger RoutedEvent="ContentControl.Loaded">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation
+                                        Storyboard.TargetName="LocalControl"
+                                        Storyboard.TargetProperty="(ContentControl.Height)"
+                                        To="20" Duration="0:0:0.5" AutoReverse="False" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </ContentControl.Triggers>-->
+                <ContentControl.Resources>
+                    <Sys:Boolean x:Key="Maxed">false</Sys:Boolean>
+                </ContentControl.Resources>
+                <Border BorderBrush="Silver" Padding="0,0,0,0" Margin="2,2,2,2" BorderThickness="4,4,4,4">
+                    <Grid Loaded="Grid_Loaded" Background="Silver">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid Margin="0,0,0,4">
+                            <Grid.Background>
+                                <LinearGradientBrush EndPoint="0.5,0.5" StartPoint="0.1,0.1">
+                                    <GradientStop Color="#FF02076A"/>
+                                    <GradientStop Color="#FF195689" Offset="1"/>
+                                </LinearGradientBrush>
+                            </Grid.Background>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="1">
+                                <!-- Detail controls here -->
+                                <Border Grid.Row="0">
+                                    <Grid DataContext="{Binding ElementName=DebugWindow}" Height="21">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto" />
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+                                        <Image Grid.Column="0" Source="/Icons/win98_icons/world_star.ico"
+                                               Stretch="UniformToFill" Margin="2,2,3,0" 
+                                               ScrollViewer.VerticalScrollBarVisibility="Disabled" 
+                                               Panel.ZIndex="11" VerticalAlignment="Center" 
+                                               HorizontalAlignment="Center" Height="21" Width="21" />
+
+                                        <TextBlock Grid.Column="1" Text="BOUNCE" Panel.ZIndex="-1" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,0" FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="18" FontWeight="Bold" FontStyle="Normal" TextDecorations="{x:Null}" LineHeight="Auto" TextAlignment="Justify" Padding="0,0,0,2" UseLayoutRounding="True" RenderTransformOrigin="0.5,0.5" >
+                                            <TextBlock.RenderTransform>
+                                                <TransformGroup>
+                                                    <ScaleTransform ScaleX="1" ScaleY="0.85"/>
+                                                    <SkewTransform/>
+                                                    <RotateTransform/>
+                                                    <TranslateTransform/>
+                                                </TransformGroup>
+                                            </TextBlock.RenderTransform>
+                                        </TextBlock>
+                                        <s:MoveThumb Grid.Column="0" Grid.ColumnSpan="2" Template="{StaticResource MoveThumbTemplate}" Cursor="SizeAll" />
+
+                                        <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="0,-4,0,-4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                                            <s:MinButton Background="Silver" Margin="1,5,1,5" Height="17" Width="17">
+                                                <TextBlock Text="&#9866;" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" />
+                                            </s:MinButton>
+                                            <s:MaxButton Foreground="Black" Background="Silver" Margin="1,5,5,5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="18" Height="17">
+                                            </s:MaxButton>
+                                        </StackPanel>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </Grid>
+                        <Frame Grid.Row="1" Grid.Column="1" x:Name="DebugControlFrame" NavigationUIVisibility="Automatic" />
+                    </Grid>
+                </Border>
+            </ContentControl>
+
+
+
         </Canvas>
     </Grid>
 
