--- a/Game/UI/LocalConsole.xaml
+++ b/Game/UI/LocalConsole.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Game.UI.Console"
+﻿<Page x:Class="Game.UI.LocalConsole"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -19,7 +19,7 @@
                 <ItemsControl ItemsSource="{Binding ConsoleOutput, Mode=OneWay}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=.}" Foreground="White" 
+                            <TextBlock Text="{Binding Path=.}" Foreground="#FFC7C7C7" 
                                        FontSize="20" TextWrapping="Wrap" TextTrimming="WordEllipsis"
                                        FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS"/>
                         </DataTemplate>
@@ -30,10 +30,10 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Margin="5,0,4,0" Grid.Column="0" Text="{Binding ConsolePrefix, Mode=TwoWay}" Background="Black" Foreground="White"
+                    <TextBlock Margin="5,0,4,0" Grid.Column="0" Text="{Binding ConsolePrefix, Mode=TwoWay}" Background="Black" Foreground="#FFC7C7C7"
                                FontSize="20" UseLayoutRounding="True" OpacityMask="Black"
                                FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS"/>
-                    <TextBox Grid.Column="1" BorderThickness="0" BorderBrush="#00000000" Text="{Binding ConsoleInput, Mode=TwoWay}" Background="Black" Foreground="White" 
+                    <TextBox Grid.Column="1" BorderThickness="0" BorderBrush="#00000000" Text="{Binding ConsoleInput, Mode=TwoWay}" Background="Black" Foreground="#FFC7C7C7" 
                              Name="InputBlock" SelectionBrush="#00000000" SelectionTextBrush="#00000000" PreviewKeyDown="InputBlock_PreviewKeyDown" Opacity="1"
                              FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20"/>
                 </Grid>
