--- a/Game/UI/IRC.xaml
+++ b/Game/UI/IRC.xaml
@@ -42,18 +42,9 @@
                 </TextBlock>
             <ScrollViewer Name="NewsScroller" Grid.Row="2" VerticalScrollBarVisibility="Disabled" BorderThickness="0,0,0,2" MinHeight="150" Panel.ZIndex="5"/>
             <Rectangle Grid.Row="2" Stroke="#FF05ACF9" StrokeThickness="1" Panel.ZIndex="20" StrokeDashArray="3 3 3" Height="1" MinWidth="1" Margin="0,2,0,2" />
-            <ScrollViewer Grid.Row="3" Name="Scroller" Margin="0" Background="Black" VerticalScrollBarVisibility="Hidden" FontFamily="Consolas" FontSize="14">
-                <StackPanel>
-                    <ItemsControl ItemsSource="{Binding IRCOutput, Mode=OneWay}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=.}" Foreground="#FFC7C7C7" 
-                                       FontSize="20" TextWrapping="Wrap" TextTrimming="WordEllipsis"
-                                       FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
+            <ScrollViewer Grid.Row="3" Name="Scroller" Margin="0" Background="Black" VerticalScrollBarVisibility="Hidden"
+                          FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20">
+                <StackPanel x:Name="IRCOutput" ScrollViewer.VerticalScrollBarVisibility="Disabled" Orientation="Vertical"/>
             </ScrollViewer>
             <Grid Grid.Row="4" Margin="0,0,0,0" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
