--- a/Game/UI/IRC.xaml
+++ b/Game/UI/IRC.xaml
@@ -18,7 +18,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Name="ChannelsScroller" Grid.Row="0" Grid.Column="0" Background="Black" Foreground="White" VerticalScrollBarVisibility="Disabled" MinWidth="100" BorderBrush="#FF3465A4" BorderThickness="0,0,2,0" Panel.ZIndex="1">
+        <ScrollViewer Name="ChannelsScroller" Grid.Row="0" Grid.Column="0" Background="Black" Foreground="White" VerticalScrollBarVisibility="Disabled" MinWidth="100" BorderBrush="#FF3465A4" BorderThickness="0,0,2,0" Panel.ZIndex="1"
+                      FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20">
             <StackPanel Name="Channels">
                 
             </StackPanel>
@@ -37,10 +38,12 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="5"/>
             </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Foreground="White" Background="#FF3465A4" Margin="0,0,0,0" Padding="5,0,0,0">
+                <TextBlock Grid.Row="0" Foreground="White" Background="#FF3465A4" Margin="0,0,0,0" Padding="5,0,0,2"
+                           FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20" HorizontalAlignment="Stretch" VerticalAlignment="Center">>
                     News Monitor
                 </TextBlock>
-            <ScrollViewer Name="NewsScroller" Grid.Row="2" VerticalScrollBarVisibility="Disabled" BorderThickness="0,0,0,2" MinHeight="150" Panel.ZIndex="5"/>
+            <ScrollViewer Name="NewsScroller" Grid.Row="2" VerticalScrollBarVisibility="Disabled" BorderThickness="0,0,0,2" MinHeight="150" Panel.ZIndex="5"
+                          FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20"/>
             <Rectangle Grid.Row="2" Stroke="#FF05ACF9" StrokeThickness="1" Panel.ZIndex="20" StrokeDashArray="3 3 3" Height="1" MinWidth="1" Margin="0,2,0,2" />
             <ScrollViewer Grid.Row="3" Name="Scroller" Margin="0" Background="Black" VerticalScrollBarVisibility="Hidden"
                           FontFamily="pack://application:,,,/Fonts/#Nintendo DS BIOS" FontSize="20">
