--- a/Game/App.xaml
+++ b/Game/App.xaml
@@ -190,5 +190,56 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style x:Key="DividerBorder" TargetType="{x:Type ContentControl}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ContentControl}">
+                        <Grid Background="Silver">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="1"/>
+                            </Grid.ColumnDefinitions>
+                            <Rectangle Fill="#808080" Grid.Column="0"/>
+                            <Rectangle Fill="White" Grid.Column="1"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="ClockInlay" TargetType="{x:Type ContentControl}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ContentControl}">
+                        <Grid Background="Silver" Margin="5,5,5,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="1"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="1"/>
+                            </Grid.RowDefinitions>
+                            <ContentPresenter Grid.Column="1" Grid.Row="1"/>
+                            <Rectangle Fill="#808080" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5"/>
+
+                            <Rectangle Fill="#808080" Grid.Column="0" Grid.Row="0" Grid.RowSpan="4"/>
+
+                            <Rectangle Fill="White" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="5"/>
+
+                            <Rectangle Fill="White" Grid.Column="2" Grid.Row="0" Grid.RowSpan="4"/>
+
+                            <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,-9,0,0" Grid.ColumnSpan="5" Panel.ZIndex="0" Grid.RowSpan="3" Background="Silver" Padding="2,0,3,0"
+                                       Text="{TemplateBinding Uid}" Height="14"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
     </Application.Resources>
 </Application>
