--- a/Game/UI/MainWindow.xaml
+++ b/Game/UI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game" xmlns:s="clr-namespace:Game.UI" xmlns:Sys="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" WindowState="Normal" WindowStyle="SingleBorderWindow" Visibility="Visible" ShowInTaskbar="False" Background="#FF30363D" Foreground="#FFD6DFE9">
+        Title="MainWindow" Height="600" Width="900" WindowState="Normal" WindowStyle="SingleBorderWindow" Visibility="Visible" ShowInTaskbar="False" Background="#FF30363D" Foreground="#FFD6DFE9" MouseUp="Window_MouseUp">
     <Window.Resources>
 
         <!-- MoveThumb Template -->
@@ -94,7 +94,7 @@
         </ControlTemplate>
     </Window.Resources>
 
-    <Grid Background="Teal" MouseUp="WindowContentControlMouseUp">
+    <Grid Background="Teal" MouseUp="WindowContentControlMouseUp" TextElement.FontFamily="pack://application:,,,/Fonts/#Joystix Monospace" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
@@ -104,6 +104,52 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
+        <ContentControl x:Name="StartMenuMenu"  Style="{StaticResource TaskBarButtonBox}" Grid.Column="0" Grid.Row="1"
+                         MinWidth="150" Panel.ZIndex="1" Margin="0,0,0,-6"
+                        Visibility="Collapsed">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="APERTURE 2000" Panel.ZIndex="99" HorizontalAlignment="Stretch" 
+                       VerticalAlignment="Stretch" Foreground="White" ScrollViewer.VerticalScrollBarVisibility="Disabled" 
+                       UseLayoutRounding="True"
+                       TextWrapping="Wrap" Margin="0,0,0,0" Padding="4,0,0,0">
+                    <TextBlock.Background>
+                        <LinearGradientBrush EndPoint="0,0" StartPoint="1,1">
+                            <GradientStop Color="Blue"/>
+                            <GradientStop Color="#FF0C00FF" Offset="1"/>
+                            <GradientStop Color="#FF556AF2" Offset="0.881"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Background>
+                    <TextBlock.LayoutTransform>
+                        <RotateTransform Angle="-90"></RotateTransform>
+                    </TextBlock.LayoutTransform>
+                </TextBlock>
+                <StackPanel Grid.Column="1" VerticalAlignment="Bottom">
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option1
+                    </Button>
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option2
+                    </Button>
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option3
+                    </Button>
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option4
+                    </Button>
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option5
+                    </Button>
+                    <Button BorderBrush="{x:Null}" Background="{x:Null}">
+                        Option6
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </ContentControl>
+        
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#FF3A434B" Grid.ColumnSpan="2">
 
             <TextBlock x:Name="GameSpeedTextBlock" Text="1" Margin="5,0,5,0"/>
@@ -117,39 +163,39 @@
                 <TextBlock Text="&gt;&gt;"/>
             </Button>
         </StackPanel>
-        <Border Grid.Row="2" BorderBrush="#FF0C0B0B" Background="Silver" BorderThickness="0,0,0,0" Margin="0,0,0,0" Padding="0,0,0,0" Height="42" Grid.ColumnSpan="2">
+        <Border Grid.Row="2" BorderBrush="#FF0C0B0B" Background="Silver" BorderThickness="0,0,0,0" Margin="0,0,0,0" Padding="0,0,0,0" Height="30" Grid.ColumnSpan="2">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
-                <Menu DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <MenuItem Header="" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <MenuItem.Background>
-                            <ImageBrush ImageSource="/Icons/OtherIcons/side-menu.png"/>
-                        </MenuItem.Background>
-                        <MenuItem Header="_New" />
-                        <MenuItem Header="_Open" />
-                        <MenuItem Header="_Save" />
-                        <Separator />
-                        <MenuItem Header="_Exit" />
-                    </MenuItem>
-                </Menu>
-                <StackPanel Name="TaskBar" Orientation="Horizontal" HorizontalAlignment="Stretch" Grid.Column="1" TextElement.FontFamily="pack://application:,,,/Fonts/#Joystix Monospace">
-                    <ContentControl x:Name="BounceTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0">
-                        <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="ToggleButton_Click">
-                            <Grid HorizontalAlignment="Stretch" Margin="-30,0,0,0">
+                <StackPanel Name="TaskBar" Orientation="Horizontal" HorizontalAlignment="Stretch" Grid.Column="1" 
+                            TextElement.FontFamily="pack://application:,,,/Fonts/#Joystix Monospace" 
+                            TextElement.FontSize="15"
+                            Margin="0,-5,0,0" Height="40">
+                    <ContentControl x:Name="StartMenu"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="3,0,0,0" Height="27">
+                        <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="MenuButtonClick" Padding="1,1,1,1" Margin="0,0,0,0">
+                            <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Source="/Icons/OtherIcons/001-network.png" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="1" Text="Bounce" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,0"/>
+
+                                <Image Grid.Column="0" Source="/Icons/OtherIcons/side-menu.png" Width="18" Height="18" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,-1" />
+                                <TextBlock Grid.Column="1" Text="Menu" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,0" Padding="0,0,0,0"/>
                             </Grid>
                         </ToggleButton>
                     </ContentControl>
-                    <ContentControl x:Name="ZeeChatTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0">
+                    <ContentControl Style="{StaticResource DividerBorder}" Padding="0,0,0,0" Margin="4,8,4,8"/>
+                    <ContentControl x:Name="BounceTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0" Height="27">
+                        <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="ToggleButton_Click">
+                            <Grid HorizontalAlignment="Left" Margin="0,0,0,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="0" Source="/Icons/OtherIcons/001-network.png" Width="18" Height="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,-1" />
+                                <TextBlock Grid.Column="1" Text="Bounce" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+                            </Grid>
+                        </ToggleButton>
+                    </ContentControl>
+                    <ContentControl x:Name="ZeeChatTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0" Height="27">
                         <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="ToggleButton_Click" Margin="0,0,0,0">
                             <Grid HorizontalAlignment="Stretch" Margin="-1,0,0,0">
                                 <Grid.ColumnDefinitions>
@@ -157,51 +203,54 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Grid.Column="0" Source="/Icons/OtherIcons/005-chat-1.png" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="1" Text="Zee Chat" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,0"/>
-                                
+                                <TextBlock Grid.Column="1" Text="Zee Chat" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0"/>
+
                             </Grid>
                         </ToggleButton>
                     </ContentControl>
-                    <ContentControl x:Name="LocalConsoleTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0">
+                    <ContentControl x:Name="LocalConsoleTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0" Height="27">
                         <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="ToggleButton_Click">
-                            <Grid HorizontalAlignment="Stretch" Margin="-69,0,0,0">
+                            <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Grid.Column="0" Source="/Icons/OtherIcons/014-programing-1.png" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="1" Text="CMD" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,0"/>
+                                <TextBlock Grid.Column="1" Text="CMD" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0"/>
 
                             </Grid>
                         </ToggleButton>
                     </ContentControl>
-                    <ContentControl x:Name="RemoteConsoleTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0">
+                    <ContentControl x:Name="RemoteConsoleTaskBarButton"  Style="{StaticResource TaskBarButtonBox}" VerticalAlignment="Center" HorizontalAlignment="Left" Width="150" Margin="0,0,4,0" Height="27">
                         <ToggleButton VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="Silver" Click="ToggleButton_Click">
-                            <Grid HorizontalAlignment="Stretch" Margin="-29,0,0,0">
+                            <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Grid.Column="0" Source="/Icons/OtherIcons/015-configuration.png" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="1" Text="TracON" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,0"/>
+                                <TextBlock Grid.Column="1" Text="TracON" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0"/>
                             </Grid>
                         </ToggleButton>
                     </ContentControl>
                 </StackPanel>
                 <StackPanel Name="Tray" HorizontalAlignment="Right" Orientation="Horizontal" Grid.Column="2">
-                    <Border BorderThickness="1,1,1,1" Background="Silver" Margin="0,2,2,2" Padding="0,1,0,1" HorizontalAlignment="Center" VerticalAlignment="Stretch">
-                        <Border.Effect>
-                            <DropShadowEffect BlurRadius="1" Direction="311" RenderingBias="Quality" ShadowDepth="0" Opacity="1"/>
-                        </Border.Effect>
-                        <TextBlock x:Name="GameTimeTextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10,0,10,2" Foreground="#FF060000" FontSize="14" FlowDirection="LeftToRight">
-                            hh:mm<LineBreak/>
+                        <ContentControl Style="{StaticResource DividerBorder}" Margin="0,3,0,3"/>
+
+                    <ContentControl Style="{StaticResource ClockInlay}" Height="34" Margin="0,-2,0,0">
+                        <StackPanel Margin="0,-4,0,0">
+                            <TextBlock x:Name="GameTimeHHMMTextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,0,2,-7" Foreground="#FF060000" FontSize="9" FlowDirection="LeftToRight" Padding="0,3,0,4">
+                            hh:mm
+                            </TextBlock>
+                            <TextBlock x:Name="GameTimeDDMMYYextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,1,2,0" Foreground="#FF060000" FontSize="9" FlowDirection="LeftToRight" Padding="0,3,0,4">
                             dd-mm-yy
-                        </TextBlock>
-                    </Border>
+                            </TextBlock>
+                        </StackPanel>
+                        
+                    </ContentControl>
                 </StackPanel>
             </Grid>
         </Border>
-
         <Canvas Grid.Row="1" x:Name="MainCanvas" Background="Teal" Margin="0,0,0,0" Grid.ColumnSpan="2">
 
             <ContentControl
@@ -466,7 +515,7 @@
                                                Panel.ZIndex="11" VerticalAlignment="Center" 
                                                HorizontalAlignment="Center" Height="21" Width="21" />
                                     <TextBlock Grid.Column="1" Text="Zee Chat IRC" Panel.ZIndex="0" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,-2,0,0" FontFamily="pack://application:,,,/Fonts/#Joystix Monospace" FontSize="10" Padding="0,0,0,0" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" TextDecorations="{x:Null}" FontStyle="Normal">
-                                       
+
                                     </TextBlock>
 
 
