--- a/Game/App.xaml
+++ b/Game/App.xaml
@@ -92,7 +92,7 @@
                             <Rectangle Fill="#808080" Grid.Column="4" Grid.Row="0" Grid.RowSpan="3"/>
                             <Rectangle Fill="#ffffff" Grid.Column="5" Grid.Row="0" Grid.RowSpan="4"/>
 
-                            <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,-9,0,0" Grid.ColumnSpan="5" Panel.ZIndex="0" Grid.RowSpan="3" Background="Silver" Padding="2,0,3,0"
+                            <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,-6,0,0" Grid.ColumnSpan="5" Panel.ZIndex="0" Grid.RowSpan="3" Background="Silver" Padding="2,0,3,0"
                                        Text="{TemplateBinding Uid}" Height="14"/>
                         </Grid>
                     </ControlTemplate>
@@ -101,6 +101,52 @@
         </Style>
 
         <Style x:Key="TaskBarButtonBox" TargetType="{x:Type ContentControl}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ContentControl}">
+                        <Grid Background="Silver">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="1"/>
+                                <ColumnDefinition Width="1"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
+                                <RowDefinition Height="1"/>
+                            </Grid.RowDefinitions>
+                            <!--//TODO change on click-->
+                            <ContentPresenter Grid.Column="3" Grid.Row="3"/>
+                            <Rectangle x:Name="r1" Fill="LightGray" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7"/>
+                            <Rectangle x:Name="r2" Fill="White" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5"/>
+                            <Rectangle x:Name="r3" Fill="Silver" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="3"/>
+
+                            <Rectangle x:Name="r4" Fill="LightGray" Grid.Column="0" Grid.Row="0" Grid.RowSpan="7" />
+                            <Rectangle x:Name="r5" Fill="White" Grid.Column="1" Grid.Row="1" Grid.RowSpan="4" />
+                            <Rectangle x:Name="r6" Fill="Silver" Grid.Column="2" Grid.Row="2" Grid.RowSpan="4" />
+
+                            <Rectangle x:Name="r7" Fill="Black" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="7"/>
+                            <Rectangle x:Name="r8" Fill="Gray" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5"/>
+                            <Rectangle x:Name="r9" Fill="Silver" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="3"/>
+
+                            <Rectangle x:Name="r10" Fill="Silver" Grid.Column="4" Grid.Row="3" Grid.RowSpan="2" />
+                            <Rectangle x:Name="r11" Fill="Gray" Grid.Column="5" Grid.Row="2" Grid.RowSpan="3" />
+                            <Rectangle x:Name="r12" Fill="Black" Grid.Column="6" Grid.Row="1" Grid.RowSpan="7" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="GameTimeBox" TargetType="{x:Type ContentControl}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ContentControl}">
